Fix images not displaying on mobile
This means the gallery is displayed on the mobile homepage...I'll fix this later

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -140,10 +140,6 @@ h6, .h6 {
 	}
 }
 
-.desktop-only {
-
-}
-
 .sidebar-heading {
 	color: $text-medium-color;
 	text-transform:uppercase;
