--- a/_sass/_includes/_gallery.scss
+++ b/_sass/_includes/_gallery.scss
@@ -5,7 +5,7 @@
 // - - - - - - - - - - - - - - - - - -
 
 .gallery {
-	visibility: hidden;
+	visibility: visible;
 	position: relative;
 	margin: 20px auto;
 
